Svevia Design and Construction

--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -40,7 +40,7 @@
 
     <!-- Document Title
 ============================================= -->
-    <title>Svevia | Construction Business HTML5 Template</title>
+    <title>Design and Construction Pty Ltd</title>
   </head>
   <body class="dark">
     <div class="preloader">
@@ -84,11 +84,11 @@
                 </li>
                 <!-- li end -->
                 <li>
-                  <a href="aboutus.html">about us</a>
+                  <a href="aboutus.html">About Us</a>
                 </li>
                 <!-- li end -->
                 <li>
-                  <a href="testimonials.html">testimonial</a>
+                  <a href="testimonials.html">Testimonial</a>
                 </li>
                 <!-- li end -->
               </ul>
@@ -140,7 +140,7 @@
               <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="heading heading-4">
                   <div class="heading-bg heading-right">
-                    <p class="mb-0">All About Svevia</p>
+                    <p class="mb-0">All About Svevia Design and Construction</p>
                     <h2>Our Story</h2>
                   </div>
                 </div>
@@ -151,15 +151,14 @@
           <!-- .col-md-12 end -->
           <div class="col-xs-12 col-sm-12 col-md-6">
             <h3 class="color-heading mb-sm font-18">
-              Svevia is a leading developer of A-grade commercial, industrial
-              and residential projects in Australia.
+              Svevia Design And Construction is a leading developer of A-grade
+              commercial, industrial and residential projects in Australia.
             </h3>
             <p class="mb-60">
-              Since its foundation the company has doubled its turnover year on
-              year, with its staff numbers swelling accordingly. Svevia has a
-              team of specialists capable of maximizing the result and
-              delivering projects of any complexity and scope. Our employees are
-              acclaimed experts in such areas as project.
+              Svevia Design and Construction is a leading of A-grade commercial,
+              industrial and residential projects in Australia. Since its
+              foundation the company has doubled its turnover year on year, with
+              its staff numbers swelling accordingly.
             </p>
             <a class="btn btn-secondary mb-30-xs" href="#">our services</a>
           </div>
@@ -348,7 +347,7 @@
                   <div class="widget-contact-info">
                     <p class="text-capitalize text-white">email us</p>
                     <p class="text-capitalize font-heading">
-                      rafal.skowron1980@yahoo.com
+                      info@svevia.com.au
                     </p>
                   </div>
                 </div>
@@ -386,12 +385,14 @@
                 <img src="assets/images/footer-logo.png" alt="logo" />
               </div>
               <div class="widget-about-info">
-                <h5 class="text-capitalize text-white">Svevia</h5>
+                <h5 class="text-capitalize text-white">
+                  Svevia Design and Construction
+                </h5>
                 <p class="mb-0">
-                  Svevia is a leading of A-grade commercial, industrial and
-                  residential projects in Australia. Since its foundation the
-                  company has doubled its turnover year on year, with its staff
-                  numbers swelling accordingly.
+                  Svevia Design and Construction is a leading of A-grade
+                  commercial, industrial and residential projects in Australia.
+                  Since its foundation the company has doubled its turnover year
+                  on year, with its staff numbers swelling accordingly.
                 </p>
               </div>
             </div>
@@ -406,10 +407,10 @@
                       <a href="index.html"> Home</a>
                     </li>
                     <li>
-                      <a href="aboutus.html"> about us</a>
+                      <a href="aboutus.html"> About us</a>
                     </li>
                     <li>
-                      <a href="testimonials.html"> testimonial</a>
+                      <a href="testimonials.html"> Testimonial</a>
                     </li>
                   </ul>
                 </div>
@@ -455,19 +456,15 @@
               <div
                 class="widget-social-icon pull-right text-right pull-none-xs"
               >
-                <a href="#">
+                <a href="https://www.facebook.com/sveviacivil">
                   <i class="fa fa-facebook"></i><i class="fa fa-facebook"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-twitter"></i><i class="fa fa-twitter"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-linkedin"></i><i class="fa fa-linkedin"></i>
                 </a>
                 <a href="#">
                   <i class="fa fa-pinterest"></i><i class="fa fa-pinterest"></i>
                 </a>
-                <a href="#">
+                <a
+                  href="https://www.flickr.com/photos/190068746@N07/albums/72157715926590077"
+                >
                   <i class="fa fa-flickr"></i><i class="fa fa-flickr"></i>
                 </a>
               </div>
@@ -481,7 +478,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 copyrights text-center">
             <p class="text-capitalize">
-              © 2020 Svevia Civil and Construction Pty Ltd. all rights reserved
+              © 2020 Design and Construction Pty Ltd. all rights reserved
             </p>
           </div>
         </div>
