--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 
     <!-- Document Title
     ============================================= -->
-    <title>Svevia Civil and Construction Pty Ltd</title>
+    <title>Design and Construction Pty Ltd</title>
   </head>
   <body class="dark">
     <div class="preloader">
@@ -99,11 +99,11 @@
                 </li>
                 <!-- li end -->
                 <li>
-                  <a href="aboutus.html">about us</a>
+                  <a href="aboutus.html">About Us</a>
                 </li>
                 <!-- li end -->
                 <li>
-                  <a href="testimonials.html">testimonial</a>
+                  <a href="testimonials.html">Testimonial</a>
                 </li>
                 <!-- li end -->
               </ul>
@@ -193,7 +193,7 @@
                 data-color="#ffc527"
                 style="font-family: montserrat"
               >
-                We Are Svevia
+                We Are Svevia Design
               </div>
 
               <!-- LAYER NR. 3 -->
@@ -433,9 +433,7 @@
                 </div>
                 <div class="widget-contact-info">
                   <p class="text-capitalize">email us</p>
-                  <p class="font-heading text-white">
-                    rafal.skowron1980@yahoo.com
-                  </p>
+                  <p class="font-heading text-white">info@svevia.com.au</p>
                 </div>
               </li>
               <!-- .widget end -->
@@ -737,7 +735,7 @@
                       aria-expanded="true"
                       aria-controls="collapse02-1"
                     >
-                      About Svevia
+                      About Svevia Design
                     </a>
                     <span class="icon"></span>
                   </h4>
@@ -749,8 +747,11 @@
                   aria-labelledby="headingOne"
                 >
                   <div class="panel-body">
-                    Since its foundation the company has doubled its turnover
-                    year on year, with its staff numbers swelling accordingly.
+                    Svevia Design and Construction is a leading of A-grade
+                    commercial, industrial and residential projects in
+                    Australia. Since its foundation the company has doubled its
+                    turnover year on year, with its staff numbers swelling
+                    accordingly.
                   </div>
                 </div>
               </div>
@@ -812,10 +813,11 @@
                   aria-labelledby="headingThree"
                 >
                   <div class="panel-body">
-                    Svevia is a leading developer of A-grade commercial,
-                    industrial and residential projects in Australia. Since its
-                    foundation the company has doubled its turnover year on
-                    year, with its staff numbers swelling accordingly.
+                    Svevia Design and Construction is a leading of A-grade
+                    commercial, industrial and residential projects in
+                    Australia. Since its foundation the company has doubled its
+                    turnover year on year, with its staff numbers swelling
+                    accordingly.
                   </div>
                 </div>
               </div>
@@ -831,53 +833,31 @@
               <div class="testimonial-item">
                 <div class="testimonial-content">
                   <p>
-                    In Svevia, understanding the needs of clients is our
-                    professional duty. We individually assess each plan and
-                    offer optimal solutions, proceeding from the project’s
-                    objectives and specifics.
+                    I can not thankyou enough for the job you performed on the
+                    fence at my property, you did a fantastic job, very
+                    professional & the quality of work was excellent & very well
+                    priced. I would definitely recommend you to others.
                   </p>
                   <div class="testimonial-img">
                     <img src="assets/images/testimonial/3.png" alt="author" />
                   </div>
                 </div>
-                <div class="testimonial-meta">
-                  <strong>Begha</strong>, Art Director
-                </div>
+                <div class="testimonial-meta">Jane Benfield</div>
               </div>
               <!-- .testimonial-item end -->
 
               <div class="testimonial-item">
                 <div class="testimonial-content">
                   <p>
-                    The skills of our project managers are attested by
-                    international certificates from leading overseas
-                    professional associations in the realm of construction, land
-                    use and real estate.
+                    Thanks so much for the amazing work you did on my retaining
+                    wall. I’m very pleased with the quality your work, and price
+                    you charged, I would definitely recommend your services.
                   </p>
                   <div class="testimonial-img">
                     <img src="assets/images/testimonial/2.png" alt="author" />
                   </div>
                 </div>
-                <div class="testimonial-meta">
-                  <strong>Habaza</strong>, Civil Engineer
-                </div>
-              </div>
-              <!-- .testimonial-item end -->
-
-              <div class="testimonial-item">
-                <div class="testimonial-content">
-                  <p>
-                    Svevia Group carries out full-cycle development, including
-                    the attraction of investments, construction and managing
-                    premium residential and non-residential properties.
-                  </p>
-                  <div class="testimonial-img">
-                    <img src="assets/images/testimonial/1.png" alt="author" />
-                  </div>
-                </div>
-                <div class="testimonial-meta">
-                  <strong>Fouad Badawy</strong>, Investor
-                </div>
+                <div class="testimonial-meta">Lisa Panania</div>
               </div>
               <!-- .testimonial-item end -->
             </div>
@@ -908,7 +888,7 @@
                 >
                   <div class="cta-desc">
                     <p>Have Any Questions !</p>
-                    <h5>Don’t Hesitate To Contact Us ANy Time.</h5>
+                    <h5>Don’t Hesitate To Contact Us Any Time.</h5>
                   </div>
                 </div>
                 <!-- .col-md-7 end -->
@@ -951,7 +931,7 @@
                   <div class="widget-contact-info">
                     <p class="text-capitalize text-white">email us</p>
                     <p class="text-capitalize font-heading">
-                      rafal.skowron1980@yahoo.com
+                      info@svevia.com.au
                     </p>
                   </div>
                 </div>
@@ -989,12 +969,14 @@
                 <img src="assets/images/footer-logo.png" alt="logo" />
               </div>
               <div class="widget-about-info">
-                <h5 class="text-capitalize text-white">Svevia</h5>
+                <h5 class="text-capitalize text-white">
+                  Svevia Design and Construction
+                </h5>
                 <p class="mb-0">
-                  Svevia is a leading of A-grade commercial, industrial and
-                  residential projects in Australia. Since its foundation the
-                  company has doubled its turnover year on year, with its staff
-                  numbers swelling accordingly.
+                  Svevia Design and Construction is a leading of A-grade
+                  commercial, industrial and residential projects in Australia.
+                  Since its foundation the company has doubled its turnover year
+                  on year, with its staff numbers swelling accordingly.
                 </p>
               </div>
             </div>
@@ -1009,10 +991,10 @@
                       <a href="index.html"> Home</a>
                     </li>
                     <li>
-                      <a href="aboutus.html"> about us</a>
+                      <a href="aboutus.html"> About us</a>
                     </li>
                     <li>
-                      <a href="testimonials.html"> testimonial</a>
+                      <a href="testimonials.html"> Testimonial</a>
                     </li>
                   </ul>
                 </div>
@@ -1058,19 +1040,15 @@
               <div
                 class="widget-social-icon pull-right text-right pull-none-xs"
               >
-                <a href="#">
+                <a href="https://www.facebook.com/sveviacivil">
                   <i class="fa fa-facebook"></i><i class="fa fa-facebook"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-twitter"></i><i class="fa fa-twitter"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-linkedin"></i><i class="fa fa-linkedin"></i>
                 </a>
                 <a href="#">
                   <i class="fa fa-pinterest"></i><i class="fa fa-pinterest"></i>
                 </a>
-                <a href="#">
+                <a
+                  href="https://www.flickr.com/photos/190068746@N07/albums/72157715926590077"
+                >
                   <i class="fa fa-flickr"></i><i class="fa fa-flickr"></i>
                 </a>
               </div>
@@ -1084,7 +1062,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 copyrights text-center">
             <p class="text-capitalize">
-              © 2020 Svevia Civil and Construction Pty Ltd. all rights reserved
+              © 2020 Design and Construction Pty Ltd. all rights reserved
             </p>
           </div>
         </div>
