--- a/public/testimonials.html
+++ b/public/testimonials.html
@@ -40,7 +40,7 @@
 
     <!-- Document Title
 ============================================= -->
-    <title>Yellow Hats | Construction Business HTML5 Template</title>
+    <title>Design and Construction Pty Ltd</title>
   </head>
   <body class="dark">
     <div class="preloader">
@@ -84,11 +84,11 @@
                 </li>
                 <!-- li end -->
                 <li>
-                  <a href="aboutus.html">about us</a>
+                  <a href="aboutus.html">About Us</a>
                 </li>
                 <!-- li end -->
                 <li>
-                  <a href="testimonials.html">testimonial</a>
+                  <a href="testimonials.html">Testimonial</a>
                 </li>
                 <!-- li end -->
               </ul>
@@ -220,14 +220,15 @@
                     <img src="assets/images/testimonial/3.png" alt="author" />
                   </div>
                   <p>
-                    The company’s experts have accumulated valuable experience
-                    in green development, being savvy to all aspects of the
-                    certification process and requirements.
+                    I can not thankyou enough for the job you performed on the
+                    fence at my property, you did a fantastic job, very
+                    professional & the quality of work was excellent & very well
+                    priced. I would definitely recommend you to others.
                   </p>
                 </div>
                 <div class="testimonial-divider"></div>
                 <div class="testimonial-meta">
-                  <h6><strong>Begha</strong>, Art Director</h6>
+                  <h6>Jane Benfield</h6>
                 </div>
               </div>
               <!-- .testimonial-item end -->
@@ -240,15 +241,14 @@
                     <img src="assets/images/testimonial/2.png" alt="author" />
                   </div>
                   <p>
-                    The skills of our project managers are attested by
-                    international certificates from leading overseas
-                    professional associations in the realm of construction, land
-                    use and real estate.
+                    Thanks so much for the amazing work you did on my retaining
+                    wall. I’m very pleased with the quality your work, and price
+                    you charged, I would definitely recommend your services.
                   </p>
                 </div>
                 <div class="testimonial-divider"></div>
                 <div class="testimonial-meta">
-                  <h6><strong>Habaza</strong>, Civil Engineer</h6>
+                  <h6>Lisa Panania</h6>
                 </div>
               </div>
               <!-- .testimonial-item end -->
@@ -258,30 +258,10 @@
                 <div class="testimonial-content">
                   <div class="testimonial-img">
                     <i class="fa fa-quote-left"></i>
-                    <img src="assets/images/testimonial/1.png" alt="author" />
-                  </div>
-                  <p>
-                    Yellow Hats Group carries out full-cycle development,
-                    including the attraction of investments, construction and
-                    managing premium residential and non-residential properties.
-                  </p>
-                </div>
-                <div class="testimonial-divider"></div>
-                <div class="testimonial-meta">
-                  <h6><strong>Fouad Badawy</strong>, Investor</h6>
-                </div>
-              </div>
-              <!-- .testimonial-item end -->
-
-              <!-- testimonial item #4 -->
-              <div class="testimonial-item">
-                <div class="testimonial-content">
-                  <div class="testimonial-img">
-                    <i class="fa fa-quote-left"></i>
                     <img src="assets/images/testimonial/3.png" alt="author" />
                   </div>
                   <p>
-                    The skills of our project managers are attested by
+                    The skills of our Svevia Engineers are attested by
                     international certificates from leading overseas
                     professional associations in the realm of construction, land
                     use and real estate.
@@ -290,49 +270,8 @@
                 <div class="testimonial-divider"></div>
                 <div class="testimonial-meta">
                   <div class="testimonial-name">
-                    <h6><strong>AYMAN FIKRY</strong>, Civil Engineer</h6>
+                    <h6>Roger Lee</h6>
                   </div>
-                </div>
-              </div>
-              <!-- .testimonial-item end -->
-
-              <!-- testimonial item #5 -->
-              <div class="testimonial-item">
-                <div class="testimonial-content">
-                  <div class="testimonial-img">
-                    <i class="fa fa-quote-left"></i>
-                    <img src="assets/images/testimonial/1.png" alt="author" />
-                  </div>
-                  <p>
-                    Yellow Hats Group carries out full-cycle development,
-                    including the attraction of investments, construction and
-                    managing premium residential and non-residential properties.
-                  </p>
-                </div>
-                <div class="testimonial-divider"></div>
-                <div class="testimonial-meta">
-                  <h6><strong>Fouad Badawy</strong>, Investor</h6>
-                </div>
-              </div>
-              <!-- .testimonial-item end -->
-
-              <!-- testimonial item #6 -->
-              <div class="testimonial-item">
-                <div class="testimonial-content">
-                  <div class="testimonial-img">
-                    <i class="fa fa-quote-left"></i>
-                    <img src="assets/images/testimonial/2.png" alt="author" />
-                  </div>
-                  <p>
-                    The skills of our project managers are attested by
-                    international certificates from leading overseas
-                    professional associations in the realm of construction, land
-                    use and real estate.
-                  </p>
-                </div>
-                <div class="testimonial-divider"></div>
-                <div class="testimonial-meta">
-                  <h6><strong>Habaza</strong>, Civil Engineer</h6>
                 </div>
               </div>
               <!-- .testimonial-item end -->
@@ -408,7 +347,7 @@
                   <div class="widget-contact-info">
                     <p class="text-capitalize text-white">email us</p>
                     <p class="text-capitalize font-heading">
-                      rafal.skowron1980@yahoo.com
+                      info@svevia.com.au
                     </p>
                   </div>
                 </div>
@@ -446,12 +385,14 @@
                 <img src="assets/images/footer-logo.png" alt="logo" />
               </div>
               <div class="widget-about-info">
-                <h5 class="text-capitalize text-white">Svevia</h5>
+                <h5 class="text-capitalize text-white">
+                  Svevia Design and Construction
+                </h5>
                 <p class="mb-0">
-                  Svevia is a leading of A-grade commercial, industrial and
-                  residential projects in Australia. Since its foundation the
-                  company has doubled its turnover year on year, with its staff
-                  numbers swelling accordingly.
+                  Svevia Design and Construction is a leading of A-grade
+                  commercial, industrial and residential projects in Australia.
+                  Since its foundation the company has doubled its turnover year
+                  on year, with its staff numbers swelling accordingly.
                 </p>
               </div>
             </div>
@@ -466,10 +407,10 @@
                       <a href="index.html"> Home</a>
                     </li>
                     <li>
-                      <a href="aboutus.html"> about us</a>
+                      <a href="aboutus.html"> About us</a>
                     </li>
                     <li>
-                      <a href="testimonials.html"> testimonial</a>
+                      <a href="testimonials.html"> Testimonial</a>
                     </li>
                   </ul>
                 </div>
@@ -515,19 +456,15 @@
               <div
                 class="widget-social-icon pull-right text-right pull-none-xs"
               >
-                <a href="#">
+                <a href="https://www.facebook.com/sveviacivil">
                   <i class="fa fa-facebook"></i><i class="fa fa-facebook"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-twitter"></i><i class="fa fa-twitter"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-linkedin"></i><i class="fa fa-linkedin"></i>
                 </a>
                 <a href="#">
                   <i class="fa fa-pinterest"></i><i class="fa fa-pinterest"></i>
                 </a>
-                <a href="#">
+                <a
+                  href="https://www.flickr.com/photos/190068746@N07/albums/72157715926590077"
+                >
                   <i class="fa fa-flickr"></i><i class="fa fa-flickr"></i>
                 </a>
               </div>
@@ -541,7 +478,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 copyrights text-center">
             <p class="text-capitalize">
-              © 2020 Svevia Civil and Construction Pty Ltd. all rights reserved
+              © 2020 Design and Construction Pty Ltd. all rights reserved
             </p>
           </div>
         </div>
