Svevia Civil and Construction

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 
     <!-- Document Title
     ============================================= -->
-    <title>Design and Construction Pty Ltd</title>
+    <title>Svevia Civil and Construction Pty Ltd</title>
   </head>
   <body class="dark">
     <div class="preloader">
@@ -193,7 +193,7 @@
                 data-color="#ffc527"
                 style="font-family: montserrat"
               >
-                We Are Svevia Design
+                We Are Svevia Civil
               </div>
 
               <!-- LAYER NR. 3 -->
@@ -452,14 +452,14 @@
               <!-- .widget end -->
 
               <li class="col-sm-4 col-md-3 widget">
-                <a
+                <!-- <a
                   class="btn btn-primary"
                   href="#"
                   data-toggle="modal"
                   data-target="#model-quote"
                   id="modelquote"
                   >Request A Quote</a
-                >
+                > -->
 
                 <!-- Modal -->
                 <div
@@ -676,13 +676,13 @@
 
         <a
           data-flickr-embed="true"
-          href="https://www.flickr.com/photos/190068746@N07/albums/72157715926590077"
-          title="Awesome"
+          href="https://www.flickr.com/photos/190068746@N07/albums/72157716095932922"
+          title="Svevia Civil"
           ><img
-            src="https://live.staticflickr.com/65535/50309855956_fdd26127cd_c.jpg"
+            src="https://live.staticflickr.com/65535/50310048662_054dcb2537_c.jpg"
             width="1024"
             height="768"
-            alt="Awesome"
+            alt="Svevia Civil"
         /></a>
         <script
           async
@@ -735,7 +735,7 @@
                       aria-expanded="true"
                       aria-controls="collapse02-1"
                     >
-                      About Svevia Design
+                      About Svevia Civil
                     </a>
                     <span class="icon"></span>
                   </h4>
@@ -747,7 +747,7 @@
                   aria-labelledby="headingOne"
                 >
                   <div class="panel-body">
-                    Svevia Design and Construction is a leading of A-grade
+                    Svevia Civil and Construction is a leading of A-grade
                     commercial, industrial and residential projects in
                     Australia. Since its foundation the company has doubled its
                     turnover year on year, with its staff numbers swelling
@@ -813,7 +813,7 @@
                   aria-labelledby="headingThree"
                 >
                   <div class="panel-body">
-                    Svevia Design and Construction is a leading of A-grade
+                    Svevia Civil and Construction is a leading of A-grade
                     commercial, industrial and residential projects in
                     Australia. Since its foundation the company has doubled its
                     turnover year on year, with its staff numbers swelling
@@ -970,10 +970,10 @@
               </div>
               <div class="widget-about-info">
                 <h5 class="text-capitalize text-white">
-                  Svevia Design and Construction
+                  Svevia Civil and Construction
                 </h5>
                 <p class="mb-0">
-                  Svevia Design and Construction is a leading of A-grade
+                  Svevia Civil and Construction is a leading of A-grade
                   commercial, industrial and residential projects in Australia.
                   Since its foundation the company has doubled its turnover year
                   on year, with its staff numbers swelling accordingly.
@@ -1047,7 +1047,7 @@
                   <i class="fa fa-pinterest"></i><i class="fa fa-pinterest"></i>
                 </a>
                 <a
-                  href="https://www.flickr.com/photos/190068746@N07/albums/72157715926590077"
+                  href="https://www.flickr.com/photos/190068746@N07/albums/72157716095932922"
                 >
                   <i class="fa fa-flickr"></i><i class="fa fa-flickr"></i>
                 </a>
@@ -1062,7 +1062,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 copyrights text-center">
             <p class="text-capitalize">
-              © 2020 Design and Construction Pty Ltd. all rights reserved
+              © 2020 Svevia Civil and Construction Pty Ltd. all rights reserved
             </p>
           </div>
         </div>
