--- a/public/404.html
+++ b/public/404.html
@@ -40,7 +40,7 @@
 
     <!-- Document Title
 ============================================= -->
-    <title>Design and Construction Pty Ltd</title>
+    <title>Svevia Civil and Construction Pty Ltd</title>
   </head>
   <body class="dark">
     <div class="preloader">
@@ -226,10 +226,10 @@
               </div>
               <div class="widget-about-info">
                 <h5 class="text-capitalize text-white">
-                  Svevia Design and Construction
+                  Svevia Civil and Construction
                 </h5>
                 <p class="mb-0">
-                  Svevia Design and Construction is a leading of A-grade
+                  Svevia Civil and Construction is a leading of A-grade
                   commercial, industrial and residential projects in Australia.
                   Since its foundation the company has doubled its turnover year
                   on year, with its staff numbers swelling accordingly.
@@ -303,7 +303,7 @@
                   <i class="fa fa-pinterest"></i><i class="fa fa-pinterest"></i>
                 </a>
                 <a
-                  href="https://www.flickr.com/photos/190068746@N07/albums/72157715926590077"
+                  href="https://www.flickr.com/photos/190068746@N07/albums/72157716095932922"
                 >
                   <i class="fa fa-flickr"></i><i class="fa fa-flickr"></i>
                 </a>
@@ -318,7 +318,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 copyrights text-center">
             <p class="text-capitalize">
-              © 2020 Design and Construction Pty Ltd. all rights reserved
+              © 2020 Svevia Civil and Construction Pty Ltd. all rights reserved
             </p>
           </div>
         </div>
