--- a/public/index.html
+++ b/public/index.html
@@ -74,11 +74,17 @@
               <a href="https://www.facebook.com/sveviacivil">
                 <i class="fa fa-facebook"></i><i class="fa fa-facebook"></i>
               </a>
-              <a href="#">
+              <!-- <a href="#">
                 <i class="fa fa-pinterest"></i><i class="fa fa-pinterest"></i>
+              </a> -->
+              <a href="tel:+61412362841">
+                <i class="fa fa-phone"></i><i class="fa fa-phone"></i>
+              </a>
+              <a href="mailto:info@svevia.com.au?subject=Inquiry">
+                <i class="fa fa-email"></i><i class="fa fa-email"></i>
               </a>
               <a
-                href="https://www.flickr.com/photos/190068746@N07/albums/72157716095932922"
+                href="https://www.flickr.com/photos/190068746@N07/albums/72157715926590077"
               >
                 <i class="fa fa-flickr"></i><i class="fa fa-flickr"></i>
               </a>
@@ -456,7 +462,11 @@
                 </div>
                 <div class="widget-contact-info">
                   <p class="text-capitalize">email us</p>
-                  <p class="font-heading text-white">info@svevia.com.au</p>
+                  <p class="font-heading text-white">
+                    <a href="mailto:info@svevia.com.au?subject=Inquiry"
+                      >info@svevia.com.au</a
+                    >
+                  </p>
                 </div>
               </li>
               <!-- .widget end -->
@@ -468,7 +478,7 @@
                 <div class="widget-contact-info">
                   <p class="text-capitalize">call us</p>
                   <p class="text-capitalize font-heading text-white">
-                    0412 362 841
+                    <a href="tel:+61412362841">0412 362 841</a>
                   </p>
                 </div>
               </li>
@@ -858,7 +868,9 @@
                   <div class="widget-contact-info">
                     <p class="text-capitalize text-white">email us</p>
                     <p class="text-capitalize font-heading">
-                      info@svevia.com.au
+                      <a href="mailto:info@svevia.com.au?subject=Inquiry"
+                        >info@svevia.com.au</a
+                      >
                     </p>
                   </div>
                 </div>
@@ -869,7 +881,9 @@
                   </div>
                   <div class="widget-contact-info">
                     <p class="text-capitalize text-white">call us</p>
-                    <p class="text-capitalize font-heading">0412 362 841</p>
+                    <p class="text-capitalize font-heading">
+                      <a href="tel:+61412362841">0412 362 841</a>
+                    </p>
                   </div>
                 </div>
                 <!-- .widget end -->
